# cargo-atomic-patch

./: Cargo.toml
src/: main.rs
