[package]
name = "cargo-atomic-patch"
version = "0.0.1"
edition = "2021"
authors = ["Giacomo Pasini <g.pasini98@gmail.com>"]
description = "Patch your (no-std) project to use emulated atomics for targets where they are not available"
license = "MIT OR Apache-2.0"

[dependencies]
toml = "0.8"
anyhow = "1"
walkdir = "2.4.0"
rayon = "1"
serde_json = "1"
